--- a/src/styles.css
+++ b/src/styles.css
@@ -228,8 +228,12 @@ h1, h2, h3, h4, h5 {
   flex-direction: column;
   align-items: center;
   font-style: italic;
-  padding-top: 2.5rem;
+  padding-top: 3.5rem;
   padding-bottom: 2.5rem;
+  font-size:1.1rem;
+  color:#647f99;
+  font-weight: 500;
+
 }
 
 a.btn {
@@ -935,7 +939,14 @@ select.bs-select-hidden, select.selectpicker {
 }
 
 .buttongroup {
-  margin: 2rem 1rem 1rem 1rem;
+  margin: 1rem 1rem 1rem 1rem;
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.buttongroup .btn-custom {
+  margin:1rem;
 }
 
 .btn-custom {
@@ -4531,6 +4542,15 @@ h1 {
       padding: 0 30px;
     }
 
+    .buttongroup {
+      margin: .3rem;
+    }
+
+    .buttongroup .btn-custom {
+      margin:0.3rem ;
+      font-size: 0.8rem;
+    }
+
 }
 
 .btn-group-sm>.btn, .btn-sm {
@@ -4599,6 +4619,15 @@ h1 {
   background-color: #fff;
 }
 
+#buttonComp .btn-sm {
+  border:0
+}
+
+#buttonComp  {
+  margin-top:3rem;
+  margin-bottom:0;
+}
+
 .filters {
   display: flex;
   justify-content: center;
@@ -4613,4 +4642,16 @@ h1 {
   #chart3 text {
     font-size: 10px;
   }
+}
+
+#drop1 a:not([href]):not([tabindex]):active {
+  color:white;
+}
+
+#drop2 a:not([href]):not([tabindex]):active {
+  color:white;
+}
+
+#centerButton {
+  justify-content: center!important;
 }
