--- a/src/styles.css
+++ b/src/styles.css
@@ -329,8 +329,8 @@ body {
   -o-background-size: cover;
   background-size: cover;
   overflow: hidden;
-  /* height: 65vh; */
-  height:400px;
+  height: 65vh;
+  min-height:400px;
   margin-top: 0px;
   display: flex;
   flex-direction: column;
